# sorting-algorithms-c-library

./: .gitignore  CMakeLists.txt  README.md
src/: sort-heap.c  sort_buble.c  sort_heap.c  sort_insertion.c  sort_merge.c  sort_quick.c  sort_selection.c
test/: CMakeLists.txt  array_checker.cpp  example_test.cpp  number_list_generator.py  test_arrays.h
